# Object-Separator

./: .gitignore  .gitmodules  CMakeLists.txt  locations.txt
include/libs/: core.hpp
include/src/: input.hpp  output.hpp  processing.hpp
include/src/utils/: announceError.hpp  readTxtFile.hpp
src/: input.cpp  main.cpp  output.cpp  processing.cpp
src/utils/: announceError.cpp  readTxtFile.cpp
